--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src/golang.org/x/tools"]
 	path = src/golang.org/x/tools
 	url = https://go.googlesource.com/tools
+[submodule "src/github.com/edsrzf/mmap-go"]
+	path = src/github.com/edsrzf/mmap-go
+	url = git@github.com:edsrzf/mmap-go
