submodules: change mmap to a https anon style
Signed-off-by: Ronald G. Minnich <rminnich@gmail.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://go.googlesource.com/tools
 [submodule "src/github.com/edsrzf/mmap-go"]
 	path = src/github.com/edsrzf/mmap-go
-	url = git@github.com:edsrzf/mmap-go
+	url = https://github.com/edsrzf/mmap-go
