Modified project settings

--- a/project.config
+++ b/project.config
@@ -29,3 +29,6 @@
 	push = +force group user/ron minnich (rminnich)
 	pushTag = group user/ron minnich (rminnich)
 	pushSignedTag = group user/ron minnich (rminnich)
+[receive]
+	requireSignedOffBy = true
+	requireChangeId = true
