bb: change paths and how we build to match our new vendor/ setup.
This also runs bb. This catches many issues.

To test this, you can do this:
sudo unshare -m chroot bbsh /init

Also, this fixes the problem of flags for *Var, since we need to change
the second argument, not the first.

Signed-off-by: Ronald G. Minnich <rminnich@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ install:
   - ls
   - du -a vendor
 script:
-  - (cd bb && go build .)
+  - (cd bb && go build . && ./bb)
   - echo "Did it blend"
 after_success:
   - if [ "$TRAVIS_BRANCH" == "master" ]; then ghr --username u-root --token $GITHUB_TOKEN --replace --prerelease --debug `git describe --always`  dist/; fi
