travis: add build of ramfs.go
Things will probably fail badly as soon as I try to run it. One step at a time.

Signed-off-by: Ronald G. Minnich <rminnich@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ install:
   - du -a vendor
 script:
   - (cd bb && go build . && ./bb)
+  - (cd scripts && go build ramfs.go)
   - echo "Did it blend"
 after_success:
   - if [ "$TRAVIS_BRANCH" == "master" ]; then ghr --username u-root --token $GITHUB_TOKEN --replace --prerelease --debug `git describe --always`  dist/; fi
