--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ install:
 script:
   - (cd bb && go build . && ./bb)
   - which go
-  - (cd scripts && go build ramfs.go)
+  - (cd scripts && go run ramfs.go -d)
   - (cd cmds && CGO_ENABLED=0 go build -a -installsuffix cgo -ldflags '-s' ./...)
   - ls -l cmds/*
   - (cd cmds && CGO_ENABLED=0 go test -a -installsuffix cgo -ldflags '-s' ./...)
