.travis.yml: add slack notifications -> #build-notices
Change-Id: I975a9b73c3ba3cac291d71e12cd584bbe077e562
Signed-off-by: Manoel Vilela <manoel_vilela@engineer.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,3 +23,6 @@ script:
   - echo "Did it blend"
 after_success:
   - if [ "$TRAVIS_BRANCH" == "master" ]; then ghr --username u-root --token $GITHUB_TOKEN --replace --prerelease --debug `git describe --always`  dist/; fi
+
+notifications:
+  slack: u-root:S74GnNB8ekAiqNYTjwbEhkQE
