--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ script:
   - (cd cmds && CGO_ENABLED=0 go build -a -installsuffix cgo -ldflags '-s' ./...)
   - ls -l cmds/*
   - (cd cmds && CGO_ENABLED=0 go test -a -installsuffix cgo -ldflags '-s' ./...)
+  - go tool vet cmds uroot netlink scripts
   - sudo date
   - echo "Did it blend"
 after_success:
