glide: remove glide
All we have to do now is
go run scripts/getimports.go

That script can run any number of times.

Signed-off-by: Ronald G. Minnich <rminnich@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,11 @@ go:
 env:
   - "PATH=/home/travis/gopath/bin:$PATH"
 before_install:
-  - go get github.com/Masterminds/glide
-  - glide up
+  - go run scripts/getimports.go -d
   - pwd
   - ls -l
 install:
   - ls
-  - du -a vendor
 script:
   - bash travis.sh
 after_success:
