fixtravis: the build script has never been right and some tools are segv'ing
make sure if things fail that it fails.

Signed-off-by: Ronald G. Minnich <rminnich@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ before_install:
 install:
   - ls
 script:
+  - cat travis.sh
   - bash travis.sh
 after_success:
   - if [ "$TRAVIS_BRANCH" == "master" ]; then ghr --username u-root --token $GITHUB_TOKEN --replace --prerelease --debug `git describe --always`  dist/; fi
