A simpler gitignore which also does not require updating

--- a/cmds/.gitignore
+++ b/cmds/.gitignore
@@ -1,59 +1,4 @@
-# ls | sed 's:\(.*\):/\1/\1:' >> .gitignore
-/ansi/ansi
-/archive/archive
-/builtin/builtin
-/cat/cat
-/chmod/chmod
-/cmp/cmp
-/comm/comm
-/cp/cp
-/cpio/cpio
-/date/date
-/dd/dd
-/dhcp/dhcp
-/dmesg/dmesg
-/echo/echo
-/ectool/ectool
-/false/false
-/fmap/fmap
-/freq/freq
-/gopxe/gopxe
-/gpgv/gpgv
-/grep/grep
-/hostname/hostname
-/init/init
-/installcommand/installcommand
-/ip/ip
-/kexec/kexec
-/kill/kill
-/ldd/ldd
-/ln/ln
-/losetup/losetup
-/ls/ls
-/mkdir/mkdir
-/mount/mount
-/mv/mv
-/netcat/netcat
-/pflask/pflask
-/ping/ping
-/printenv/printenv
-/ps/ps
-/pwd/pwd
-/rm/rm
-/run/run
-/rush/rush
-/seq/seq
-/sort/sort
-/srvfiles/srvfiles
-/sync/sync
-/tcz/tcz
-/tee/tee
-/time/time
-/true/true
-/uname/uname
-/uniq/uniq
-/unshare/unshare
-/validate/validate
-/wc/wc
-/wget/wget
-/which/which
+# Ignore binaries (files without extensions)
+*
+!*.*
+!*/
