--- a/website/mkdocs.yml
+++ b/website/mkdocs.yml
@@ -1,21 +1,9 @@
-site_name: U-root
-site_description: "U-root: A Go-based, Firmware Embeddable Root File System with On-demand Compilation"
-site_url: http://u-root.org
+site_name: u-root
+site_description: "u-root: A Go-based, Firmware Embeddable Root File System with On-demand Compilation"
+site_url: http://u-root.tk
 site_favicon: img/favicon.png
-# copyright
-# google_analytics
+copyright: "Copyright 2016-2017 The u-root team"
 pages:
   - Home: index.md
-  - About: about.md 
-#  - Usenix: usenix.md
-  - News: news.md
-  - Download: download.md
-  - Community: community.md
-  - Roadmap: roadmap.md
-  - Documentation: 
-#    - FAQ: docs/faq.md
-     - Getting started: docs/getting-started.md
-#    - Manual: docs/manual.md
-theme: journal 
-theme_dir: uroot-theme
+theme: mkdocs
 repo_url: https://github.com/u-root/u-root
