--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -43,3 +43,7 @@ required = [
   branch = "master"
   name = "golang.org/x/tools"
 
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/rck/unit"
