--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -83,6 +83,8 @@ jobs:
     docker:
       - image: circleci/golang:latest
     working_directory: /go/src/github.com/u-root/u-root
+    environment:
+      - CGO_ENABLED: 0
     steps:
       - checkout
       - run:
