pkg/uroot: undo rename of function, add CI for makebb.
1ce66b0 needlessly renamed ResolvePackagePaths to
BuildOpts.ResolvePackages. This undoes that, as it broke the makebb
tool.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -207,7 +207,9 @@ jobs:
           name: build all tools
           command: |
             cd cmds
-            go build -a -installsuffix uroot -ldflags '-s' ./...
+            go install -a ./...
+            cd ../tools
+            go install -a ./...
   source_amd64:
     docker:
       - image: circleci/golang:latest
