--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,18 @@
 language: go
 
+sudo: false
+
 go:
   - "1.8"
   - "1.9"
   - "1.10"
-  - master
+  - tip
+
+before_install:
+  - go get -t -v ./...
+
+script:
+  - ./.travis/tests.sh
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
