--- a/integration/testdata/CONFIG
+++ b/integration/testdata/CONFIG
@@ -23,6 +23,7 @@ CONFIG_TTY=y
 
 # Add /dev/port for io command:
 
+CONFIG_PCI=y
 CONFIG_DEVPORT=y
 
 # Add vfat filesystem:
@@ -34,12 +35,14 @@ CONFIG_BLK_DEV_SD=y
 CONFIG_MSDOS_FS=y
 CONFIG_VFAT_FS=y
 CONFIG_FAT_DEFAULT_CODEPAGE=437
+CONFIG_FAT_DEFAULT_IOCHARSET="iso8859-1"
 CONFIG_NLS=y
 CONFIG_NLS_CODEPAGE_437=y
 CONFIG_NLS_ISO8859_1=y
 
-# Add kexec syscall.
+# Add kexec syscall:
 
+CONFIG_CRYPTO=y
 CONFIG_KEXEC=y
 CONFIG_KEXEC_FILE=y
 
