--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,7 +55,7 @@ workflows:
 jobs:
   clean-code:
     docker:
-      - image: circleci/golang:latest
+      - image: circleci/golang:1.11
     working_directory: /go/src/github.com/u-root/u-root
     steps:
       - checkout
@@ -91,7 +91,7 @@ jobs:
           command: ineffassign .
   test:
     docker:
-      - image: circleci/golang:latest
+      - image: circleci/golang:1.11
     working_directory: /go/src/github.com/u-root/u-root
     environment:
       - CGO_ENABLED: 0
@@ -116,7 +116,7 @@ jobs:
           command: go test -v -a -ldflags '-s' ./integration/...
   race:
     docker:
-      - image: circleci/golang:latest
+      - image: circleci/golang:1.11
     working_directory: /go/src/github.com/u-root/u-root
     environment:
       - CGO_ENABLED: 1
@@ -127,7 +127,7 @@ jobs:
           command: go test -race ./pkg/... ./cmds/... ./xcmds/...
   bb_amd64:
     docker:
-      - image: circleci/golang:latest
+      - image: circleci/golang:1.11
     working_directory: /go/src/github.com/u-root/u-root
     environment:
       - CGO_ENABLED: 0
@@ -158,7 +158,7 @@ jobs:
           destination: bb_initramfs.linux_amd64.cpio.1
   bb_arm7:
     docker:
-      - image: circleci/golang:latest
+      - image: circleci/golang:1.11
     working_directory: /go/src/github.com/u-root/u-root
     environment:
       - CGO_ENABLED: 0
@@ -182,7 +182,7 @@ jobs:
           destination: bb_initramfs.linux_arm.cpio.lzma
   bb_arm64:
     docker:
-      - image: circleci/golang:latest
+      - image: circleci/golang:1.11
     working_directory: /go/src/github.com/u-root/u-root
     environment:
       - CGO_ENABLED: 0
@@ -205,7 +205,7 @@ jobs:
           destination: bb_initramfs.linux_arm64.cpio.lzma
   bb_ppc64le:
     docker:
-      - image: circleci/golang:latest
+      - image: circleci/golang:1.11
     working_directory: /go/src/github.com/u-root/u-root
     environment:
       - CGO_ENABLED: 0
@@ -228,7 +228,7 @@ jobs:
           destination: bb_initramfs.linux_ppc64le.cpio.lzma
   compile_cmds:
     docker:
-      - image: circleci/golang:latest
+      - image: circleci/golang:1.11
     working_directory: /go/src/github.com/u-root/u-root
     environment:
       - CGO_ENABLED: 0
@@ -245,7 +245,7 @@ jobs:
             go install -a ./...
   source_amd64:
     docker:
-      - image: circleci/golang:latest
+      - image: circleci/golang:1.11
     working_directory: /go/src/github.com/u-root/u-root
     environment:
       - CGO_ENABLED: 0
@@ -267,7 +267,7 @@ jobs:
           destination: source_initramfs.linux_amd64.cpio.lzma
   source_amd64_test_archive:
     docker:
-      - image: circleci/golang:latest
+      - image: circleci/golang:1.11
     working_directory: /go/src/github.com/u-root/u-root
     environment:
       - CGO_ENABLED: 0
@@ -297,7 +297,7 @@ jobs:
           working_directory: /tmp/u-root-test
   extra_files:
     docker:
-      - image: circleci/golang:latest
+      - image: circleci/golang:1.11
     working_directory: /go/src/github.com/u-root/u-root
     environment:
       - CGO_ENABLED: 0
@@ -323,7 +323,7 @@ jobs:
           working_directory: /tmp/u-root-test
   extra_files_multiple_files:
     docker:
-      - image: circleci/golang:latest
+      - image: circleci/golang:1.11
     working_directory: /go/src/github.com/u-root/u-root
     environment:
       - CGO_ENABLED: 0
@@ -352,7 +352,7 @@ jobs:
           working_directory: /tmp/u-root-test
   extra_files_comma_syntax:
     docker:
-      - image: circleci/golang:latest
+      - image: circleci/golang:1.11
     working_directory: /go/src/github.com/u-root/u-root
     environment:
       - CGO_ENABLED: 0
@@ -378,7 +378,7 @@ jobs:
           working_directory: /tmp/u-root-test
   extra_files_multiple_files_mixed_syntax:
     docker:
-      - image: circleci/golang:latest
+      - image: circleci/golang:1.11
     working_directory: /go/src/github.com/u-root/u-root
     environment:
       - CGO_ENABLED: 0
@@ -404,7 +404,7 @@ jobs:
           working_directory: /tmp/u-root-test
   extra_files_wrong_comma_syntax:
     docker:
-      - image: circleci/golang:latest
+      - image: circleci/golang:1.11
     working_directory: /go/src/github.com/u-root/u-root
     environment:
       - CGO_ENABLED: 0
@@ -423,7 +423,7 @@ jobs:
           command: if ./u-root -build=bb --tmpdir=/tmp/u-root -files /bin/bash:/bin/bash; then exit 1; else exit 0; fi
   check_licenses:
     docker:
-      - image: circleci/golang:latest
+      - image: circleci/golang:1.11
     working_directory: /go/src/github.com/u-root/u-root
     environment:
       - CGO_ENABLED: 0
