Revert "remove gofmt test"
This reverts commit 067d852638aa00a053a86068519a9db5727c1527.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -87,6 +87,9 @@ jobs:
             go tool vet cmds xcmds pkg
             go tool vet u-root.go
       - run:
+          name: gofmt
+          command: test -z $(gofmt -s -l cmds xcmds pkg u-root.go)
+      - run:
           name: ineffassign
           command: ineffassign .
   test:
