--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -89,10 +89,10 @@ jobs:
       - checkout
       - run:
           name: Test all
-          command: go test -a -ldflags '-s' ./pkg/... ./cmds/... ./xcmds/... .
+          command: go test -a -ldflags '-s' ./...
       - run:
           name: Test coverage
-          command: go test -cover ./pkg/... ./cmds/... ./xcmds/... .
+          command: go test -cover ./...
   test-integration:
     docker:
       - image: uroottest/x86-integration:latest
@@ -116,39 +116,7 @@ jobs:
       - checkout
       - run:
           name: Race detector
-          command: go test -race ./pkg/... ./cmds/... ./xcmds/...
-  bb_amd64:
-    docker:
-      - image: circleci/golang:1.11
-    working_directory: /go/src/github.com/u-root/u-root
-    environment:
-      - CGO_ENABLED: 0
-    steps:
-      - checkout
-      - run:
-          name: Build u-root
-          command: go build u-root.go
-      - run:
-          name: First bb build
-          command: |
-            ./u-root -build=bb
-            mv /tmp/initramfs.linux_amd64.cpio /tmp/initramfs.linux_amd64.cpio.1
-      - run:
-          name: Second bb build
-          command: ./u-root -build=bb
-      - run:
-          name: cmp bb test output (test reproducibility)
-          command: cmp /tmp/initramfs.linux_amd64.cpio /tmp/initramfs.linux_amd64.cpio.1
-      - run:
-          name: Compress cpio
-          command: lzma -9 /tmp/initramfs.linux_amd64.cpio
-      - store_artifacts:
-          path: /tmp/initramfs.linux_amd64.cpio.lzma
-          destination: bb_initramfs.linux_amd64.cpio.lzma
-      - store_artifacts:
-          path: /tmp/initramfs.linux_amd64.cpio.1
-          destination: bb_initramfs.linux_amd64.cpio.1
-          destination: bb_initramfs.linux_arm64.cpio.lzma
+          command: go test -race ./...
   compile_cmds:
     docker:
       - image: circleci/golang:1.11
