TCZ test also need squashfs
Signed-off-by: Ryan O'Leary <ryanoleary@google.com>

--- a/integration/testdata/CONFIG
+++ b/integration/testdata/CONFIG
@@ -53,6 +53,8 @@ CONFIG_RELOCATABLE=y
 # Loop device for tcz:
 
 CONFIG_BLK_DEV_LOOP=y
+CONFIG_MISC_FILESYSTEMS=y
+CONFIG_SQUASHFS=y
 
 # Build Linux:
 #
