xcmds/sshd: add a new sshd based on the gliderlabs package
Signed-off-by: Ronald G. Minnich <rminnich@gmail.com>

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -32,3 +32,7 @@ ignored = ["github.com/u-root/u-root/bb*"]
 [[constraint]]
   name = "github.com/beevik/ntp"
   version = "0.2.0"
+
+[[constraint]]
+  name = "github.com/gliderlabs/ssh"
+  revision = "cbabf541443203944eeedf87d8bb92e2924170b5"
