integration: Use new naming convention for images
This is a small cleanup so images for more architectures can be added.

Signed-off-by: Ryan O'Leary <ryanoleary@google.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -93,9 +93,9 @@ jobs:
       - run:
           name: Test coverage
           command: go test -cover ./...
-  test-integration:
+  test-integration-amd64:
     docker:
-      - image: uroottest/x86-integration:v3.2.1
+      - image: uroottest/test-image-amd64:v3.2.0
     working_directory: /go/src/github.com/u-root/u-root
     environment:
       - CGO_ENABLED: 0
