Disable cgo for clean code tests
Signed-off-by: Ryan O'Leary <ryanoleary@google.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,8 @@ jobs:
     docker:
       - image: circleci/golang:1.11
     working_directory: /go/src/github.com/u-root/u-root
+    environment:
+      - CGO_ENABLED: 0
     steps:
       - checkout
       - run:
