--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -97,7 +97,7 @@ jobs:
           command: go test -a -ldflags '-s' ./...
       - run:
           name: Test coverage
-          command: go test -cover `go list ./... | grep -v TestUrootCmdline`
+          command: go test -cover `go list ./... | grep github.com/u-root/u-root/`
   test-integration-amd64:
     docker:
       - image: uroottest/test-image-amd64:v3.2.3
@@ -134,7 +134,7 @@ jobs:
       - checkout
       - run:
           name: Race detector
-          command: go test -race `go list ./... | grep -v TestUrootCmdline`
+          command: go test -race `go list ./... | grep github.com/u-root/u-root/`
   compile_cmds:
     docker:
       - image: circleci/golang:1.11
