u-root: Fix dynamic builds
minimal would not build correctly as installfs was in core.
Technically, core should be able to just name minimal and then
add more names.

Also add tests to make sure we don't break anything in future.
The -fourbins does add significant savings, almost 4M on an
uncompressed dynamic image.

Signed-off-by: Ronald G. Minnich <rminnich@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -173,3 +173,25 @@ jobs:
       - run:
           name: Symbol tests to ensure we do not break symlink handling
           command: mkdir /tmp/usr && ln -s /tmp/usr/x /tmp/usr/y && go run u-root.go -build=bb -files /tmp/usr minimal
+  check_templates:
+    docker:
+      - image: circleci/golang:1.12
+    working_directory: /go/src/github.com/u-root/u-root
+    environment:
+      - CGO_ENABLED: 0
+    steps:
+      - checkout
+      - run:
+          name: ensure that every template builds for a variety of options.
+          command: |
+                  go run u-root.go -build=bb minimal
+                  go run u-root.go minimal
+                  go run u-root.go -build=bb core
+                  go run u-root.go core
+                  go run u-root.go -build=bb coreboot-app
+                  go run u-root.go coreboot-app
+                  go run u-root.go -build=bb all
+                  go run u-root.go all
+                  go run u-root.go -build=bb all core
+                  go run u-root.go all core
+                  go run u-root.go -fourbins minimal
