--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,27 @@
 language: go
 
+services:
+  - docker
+
+env:
+  - TEST_SUITE=units
+  - TEST_SUITE=integration
+
 sudo: false
 
 go:
   - "1.12"
 
-before_install:
-  - go get -t -v ./...
-
-script:
-  - ./.travis/tests.sh
+script: |
+  set -x
+  case $TEST_SUITE in
+  integration)
+      docker build -t systemboottest -f .travis/docker/Dockerfile . &&
+      docker run --rm -i systemboottest;;
+  *)
+      go get -t -v ./... &&
+      ./.travis/tests.sh
+  esac
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
