circleci: only print logs for failing tests
go test -v always prints a lot of logs. Without -v, only failing tests'
logs will be printed.

Signed-off-by: Chris Koch <chrisko@google.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ templates:
       - checkout
       - run:
           name: Test integration
-          command: go test -v -a -ldflags '-s' ./integration/...
+          command: go test -a -ldflags '-s' ./integration/...
       - run:
           name: Copying serial output to /tmp/serial
           command: cp -R integration/serial /tmp/serial
