circleci: Store artifacts even on failure
The artifacts were being copied to the /tmp directory using a "run" step
which do not run when a previous "run" step fails. The "store_artifacts"
step has a "destination" field which should have a similar effect to the
deleted "run" step.

Signed-off-by: Ryan O'Leary <ryanoleary@google.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,12 +15,12 @@ templates:
       - checkout
       - run:
           name: Test integration
-          command: go test -a -ldflags '-s' ./integration/...
-      - run:
-          name: Copying serial output to /tmp/serial
-          command: cp -R integration/serial /tmp/serial
+          command: |
+            go test -v -a -ldflags '-s' ./integration/...
+            find
       - store_artifacts:
-          path: /tmp/serial
+          path: integration/serial
+          destination: serial
 
 workflows:
   version: 2
