circleci: Fix gofmt test
Signed-off-by: Ryan O'Leary <ryanoleary@google.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -84,7 +84,7 @@ jobs:
       - run:
           name: gofmt
           command: |
-              test -z "$(gofmt -s -l $(go list ./... | grep -v /vendor/))"
+            test -z "$(gofmt -s -l $(find -name '*.go' | grep -v /vendor/))"
       - run:
           name: gometalinter
           command: |
